# Mandelbrot-viewer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/App/: main.hpp
include/App/CUDA/: CUDAMain.hpp  kernel.cuh
include/App/GUI/: GUIMain.hpp
include/Common/: CUDA.hpp  FileUtil.hpp  GUI.hpp  Image.hpp
include/Mandelbrot/: kernel.cuh  model.hpp
src/: CMakeLists.txt
src/App/: CMakeLists.txt  main.cpp
src/App/CUDA/: CMakeLists.txt  kernel.cu  main.cpp
src/App/GUI/: CMakeLists.txt  main.cpp
src/Common/: CMakeLists.txt  CUDA.cpp  FIleUtil.cpp  FileUtil.cpp  GUI.cpp  Image.cpp
src/Mandelbrot/: CMakeLists.txt  kernel.cu  model.cpp
